--- a/games/smb/assets/sprites/01.yaml
+++ b/games/smb/assets/sprites/01.yaml
@@ -2,6 +2,7 @@
 mario:
   sheet: "gfx/smb1.png"
   thickness: 1
+  frame_time: 2
   type: "asset.boxed"
   boxes:
     - [-6, 0, 6, 16]
@@ -10,26 +11,26 @@ mario:
     idle:
       loop: true
       box: 0
-      frames:
-        - [0, 0, 16, 16, 8, 0]
+      elements:
+        - quads: [[0, 0, 16, 16, 8, 0]]
     walk:
       box: 0
-      frames:
-        - [16, 0, 16, 16, 8, 0]
-        - [32, 0, 16, 16, 8, 0]
-        - [48, 0, 16, 16, 8, 0]
+      elements:
+        - quads: [[16, 0, 16, 16, 8, 0]]
+        - quads: [[32, 0, 16, 16, 8, 0]]
+        - quads: [[48, 0, 16, 16, 8, 0]]
     jump:
       box: 0
-      frames:
-        - [80, 0, 16, 16, 8, 0]
+      elements:
+        - quads: [ [80, 0, 16, 16, 8, 0]]
     dead:
       box: 0
-      frames:
-        - [96, 0, 16, 16, 8, 0]
+      elements:
+        - quads: [ [96, 0, 16, 16, 8, 0]]
     slide:
       box: 0
-      frames:
-        - [176, 64, 16, 16, 8, 0]
+      elements:
+        - quads: [ [176, 64, 16, 16, 8, 0]]
 
 supermario:
   sheet: "gfx/smb1.png"
@@ -42,21 +43,21 @@ supermario:
     idle:
       loop: true
       box: 0
-      frames:
-        - [80, 16, 16, 32, 8, 0]
+      elements:
+        - quads: [[80, 16, 16, 32, 8, 0]]
     walk:
       box: 0
-      frames:
-        - [96, 16, 16, 32, 8, 0]
-        - [112, 16, 16, 32, 8, 0]
-        - [128, 16, 16, 32, 8, 0]
+      elements:
+        - quads: [[96, 16, 16, 32, 8, 0]]
+        - quads: [[112, 16, 16, 32, 8, 0]]
+        - quads: [[128, 16, 16, 32, 8, 0]]
     jump:
       box: 0
-      frames:
-        - [144, 16, 16, 32, 8, 0]
+      elements:
+        - quads: [[144, 16, 16, 32, 8, 0]]
     slide:
-      frames:
-        - [192, 64, 16, 32, 8, 0]
+      elements:
+        - quads: [[192, 64, 16, 32, 8, 0]]
 fierymario:
   sheet: "gfx/smb1.png"
   thickness: 1
@@ -109,53 +110,53 @@ brick:
   type: "asset.sprite"
   animations:
     idle:
-      frames:
-        - [240, 0, 16, 16]
+      elements:
+        - quads: [[240, 0, 16, 16]]
 brick2:
   sheet: "gfx/smb1.png"
   type: "asset.sprite"
   animations:
     idle:
-      frames:
-        - [160, 48, 16, 16]
+      elements:
+        - quads: [[160, 48, 16, 16]]
 bonusbrick:
   sheet: "gfx/smb1.png"
   type: "asset.sprite"
   animations:
     default:
-      frames:
-        - [160, 0, 16, 16]
-        - [176, 0, 16, 16]
-        - [192, 0, 16, 16]
-        - [176, 0, 16, 16]
+      elements:
+        - quads: [[160, 0, 16, 16]]
+        - quads: [[176, 0, 16, 16]]
+        - quads: [[192, 0, 16, 16]]
+        - quads: [[176, 0, 16, 16]]
     taken:
-      frames:
-        - [224, 0, 16, 16]
+      elements:
+        - quads: [[224, 0, 16, 16]]
 bonusbrick2:
   sheet: "gfx/smb1.png"
   type: "asset.sprite"
   animations:
     default:
-      frames:
-        - [160, 48, 16, 16]
+      elements:
+        - quads: [[160, 48, 16, 16]]
     taken:
-      frames:
-        - [240, 96, 16, 16]
+      elements:
+        - quads: [[240, 96, 16, 16]]
 
 brickpiece:
   sheet: "gfx/smb1.png"
   type: "asset.sprite"
   animations:
     idle:
-      frames:
-        - [64,16,16,16]
+      elements:
+        - quads: [[64,16,16,16]]
 brickpiece2:
   sheet: "gfx/smb1.png"
   type: "asset.sprite"
   animations:
     idle:
-      frames:
-        - [224,80,16,16]
+      elements:
+        - quads: [[224,80,16,16]]
 
 mushroom:
   sheet: "gfx/smb1.png"
@@ -165,8 +166,8 @@ mushroom:
   animations:
     walk:
       box: 0
-      frames:
-        - [48, 16, 16, 16, 8, 0]
+      elements:
+        - quads: [[48, 16, 16, 16, 8, 0]]
 flower:
   sheet: "gfx/smb1.png"
   type: "asset.boxed"
@@ -175,11 +176,11 @@ flower:
   animations:
     walk:
       box: 0
-      frames:
-        - [176, 96,16,16,8,0]
-        - [192, 96,16,16,8,0]
-        - [208, 96,16,16,8,0]
-        - [224, 96,16,16,8,0]
+      elements:
+        - quads: [[176, 96,16,16,8,0]]
+        - quads: [[192, 96,16,16,8,0]]
+        - quads: [[208, 96,16,16,8,0]]
+        - quads: [[224, 96,16,16,8,0]]
 
 flag:
   sheet: "gfx/smb1.png"
@@ -248,28 +249,28 @@ flyingcoin:
   type: "asset.sprite"
   animations:
     walk:
-      frames:
-        - [160, 16, 16, 16, 8, 0]
-        - [176, 16, 16, 16, 8, 0]
-        - [192, 16, 16, 16, 8, 0]
-        - [208, 16, 16, 16, 8, 0]
+      elements:
+        - quads: [[160, 16, 16, 16, 8, 0]]
+        - quads: [[176, 16, 16, 16, 8, 0]]
+        - quads: [[192, 16, 16, 16, 8, 0]]
+        - quads: [[208, 16, 16, 16, 8, 0]]
 score100:
   sheet: 'gfx/smb1.png'
   type: 'asset.sprite'
   animations:
     def:
-      frames:
-        - [0, 80, 16, 16, 8, 0]
+      elements:
+        - quads: [[0, 80, 16, 16, 8, 0]]
 coin_counter:
   sheet: 'gfx/smb1.png'
   type: 'asset.sprite'
   animations:
     def:
-      frames:
-        - [128,80,16,16]
-        - [144,80,16,16]
-        - [160,80,16,16]
-        - [144,80,16,16]
+      elements:
+        - quads: [[128,80,16,16]]
+        - quads: [[144,80,16,16]]
+        - quads: [[160,80,16,16]]
+        - quads: [[144,80,16,16]]
 foam:
   sheet: 'gfx/smb1.png'
   type: 'asset.sprite'
