--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,9 @@ endif (WIN32)
 IF(MSVC)
     SET(CMAKE_CXX_FLAGS "/EHsc")
 ENDIF(MSVC)
-
+message ("CANE")
+message (${CMAKE_CXX_FLAGS})
+message ("CANE")
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 REQUIRED)
@@ -36,9 +38,11 @@ find_package(Freetype REQUIRED)
 find_package(PNG REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(yaml-cpp REQUIRED)
-find_package(ASSIMP REQUIRED)
+message(${yaml-cpp_FOUND})
+message("PIPPO")
+#find_package(ASSIMP REQUIRED)
 #find_package(Lua REQUIRED)
-find_package(Python COMPONENTS Interpreter Development REQUIRED)
+find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 
 if(APPLE)
     find_library(BZ2_LIB bz2)
