--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -16,11 +16,11 @@ add_library(monkey SHARED ${MONKEY_SOURCE})
 
 #message(${LUA_INCLUDE_DIR})
 
-include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
+include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python3_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS}
 		${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${YAML_INCLUDE_DIRS})
 
 target_link_libraries(monkey
-    ${OPENGL_LIBRARIES} ${Python_LIBRARIES} glfw
+    ${OPENGL_LIBRARIES} ${Python3_LIBRARIES} glfw
     GLEW::GLEW ${FREETYPE_LIBRARIES} ${YAML_CPP_LIBRARIES}
     ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} alglib)
 
