--- a/games/smb/rooms/world1_2.yaml
+++ b/games/smb/rooms/world1_2.yaml
@@ -18,7 +18,7 @@
     - factory: [platform, {'image': '/gfx/block4.png' } ]
       d: [ [0, 0, 0, 80, 2], [83, 0, 0, 37, 2], [122, 0, 0, 2, 2], [126, 0, 0, 12, 2], [145, 0, 0, 8, 2], [160, 0, 0, 32, 2] ]
     - factory: [platform, {'image': '/gfx/brick2.png' } ]
-      d: [ [0, 2, 0, 1, 11], [6, 12, 0, 74, 1], [84, 6, 0, 6,2], [160, 2, 0, 17, 3], [122, 2, 0, 2, 3], [170, 5, 0, 7, 8],[161, 12, 0, 7, 1] ]
+      d: [ [0, 2, 0, 1, 11], [6, 12, 0, 132, 1], [84, 6, 0, 6,2], [160, 2, 0, 17, 3], [122, 2, 0, 2, 3], [170, 5, 0, 7, 8],[161, 12, 0, 7, 1] ]
     - factory: [platform, {'image': '/gfx/block5.png' } ]
       d: [ [17,2,0,1,1], [19,2,0,1,2], [21,2,0,1,3], [23,2,0,1,4], [25,2,0,1,4], [27,2,0,1,3], [31,2,0,1,3], [33,2,0,1,2], [133,2,0,5,1],[134,3,0,4,1],[135,4,0, 3,1],[136,5,0,2,1]]
     - factory: [mushroom_brick]
@@ -39,28 +39,34 @@
            [145,6],[146,6],[147,6],[148,6],[149,6],[150,6]]
 #    - factory: [hotspot, {'model':pickupcoin, 'func':pickup_coin}]
 #      d: [ [40,6],[41,9],[42,9],[43,9],[44,9],[45,6], [58,6],[59,6],[60,6],[61,6], [84,9],[85,9],[86,9],[87,9],[88,9],[89,9]]
-#    - factory: [tile_map, {'id': pipe2}]
-#      d: [ [115, 2,1] ]
-#    - factory: [tile_map, {'id': pipe3}]
-#      d: [ [103, 2] ]
-#    - factory: [tile_map, {'id': pipe4}]
-#      d: [ [109, 2] ]
+    - factory: [tile_map, {'id': pipe2}]
+      d: [ [115, 2,1] ]
+    - factory: [tile_map, {'id': pipe3}]
+      d: [ [103, 2] ]
+    - factory: [tile_map, {'id': pipe4}]
+      d: [ [109, 2] ]
     - factory: [moving_platform]
       d: [ [140, 0, 0, 3, 0, 12, 1, 20], [140, 0, 0, 3, 0.5, 12, 1, 20] ]
     - factory: [moving_platform]
       d: [ [155, 12, 0, 3, 0, -12, 1, 20], [155, 12, 0, 3, 0.5, -12, 1, 20] ]
 #    - factory: [warp, { tag: w1 }]
 #      d: [[116,4,0,'world1_2b',0]]
-#    - factory: [tile_map, {'id': pipeh}]
-#      d: [[166,5,1]]
-#    - factory: [tile_map, {'id': pipeh3}]
-#      d: [[168,7,1]]
-#    - factory: [line]
-#      d: [[166,7,0,0,2,0]]
+    - factory: [tile_map, {'id': pipeh}]
+      d: [[166,5,1]]
+    - factory: [tile_map, {'id': pipeh3}]
+      d: [[168,7,1]]
+    - factory: [line]
+      d: [[166,7,0,0,2,0]]
+    - factory: [pipe, {'top_left': [0,3], 'foe': sprites/01/plant}]
+      d: [[4,2,1,4]]
 #    - factory: [hotspot, {'func': pipe_out, 'info': {'world': 'world1_1', 'pos': 0}}]
 #      d: [[165.9,5,0,2,2]]
     - factory: [foe, {'id': goomba2}]
       d: [ [16.5, 2], [18, 3], [29, 2]]
+    #- factory: [plant, {'model': sprites/01/plant}]
+    #  d: [ [116, 4], [104, 5], [110, 6] ]
+    - factory: [warp, { 'tag': w1}]
+      d: [ [116, 4, 0, 'world1_2b', 0] ]
     - factory: [hotspot, {'model': sprites/01/pickupcoin, 'func': pickup_coin}]
       d: [[40, 6], [41, 9], [42, 9], [43, 9], [44, 9], [45, 6], [58, 6], [59, 6], [60, 6], [61, 6],
           [68, 6]]
