turn scumm into a library

--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -156,11 +156,11 @@ door_scummbar_kitchen:
   type: "asset.sprite"
   animations:
     open:
-      frames:
-        - [435,73,35,69]
+      elements:
+        - quads: [[435,73,35,69]]
     closed:
-      frames:
-        - [435,2,35,69]
+      elements:
+        - quads: [[435,2,35,69]]
 door_kitchen_scummbar:
   sheet: "gfx/sprites/sprites1.png"
   type: "asset.sprite"
@@ -352,35 +352,35 @@ cook:
   type: 'asset.sprite'
   animations:
     idle_e:
-      frames:
-        - [ [2, 34, 28, 35, 17, 0], [36, 57, 11, 16, 7, -32] ]
+      elements:
+        - quads: [[2, 34, 28, 35, 17, 0], [36, 57, 11, 16, 7, -32]]
     idle_n:
-      frames:
-        - [2, 72, 36, 48, 17, 0]
+      elements:
+        - quads: [[2, 72, 36, 48, 17, 0]]
     idle_s:
-      frames:
-        - [39, 77, 31, 48, 15, 0]
+      elements:
+        - quads: [[39, 77, 31, 48, 15, 0]]
     talk_e:
-      frames:
-        - [ [2, 34, 28, 35, 17, 0], [90, 57, 11, 16, 8, 0]]
-        - [ [2, 34, 28, 35, 17, 0], [50, 57, 12, 18, 7, 2]]
-        - [ [2, 34, 28, 35, 17, 0], [64, 57, 11, 17, 8, 1]]
-        - [ [2, 34, 28, 35, 17, 0], [77, 57, 11, 17, 8, 1]]
-        - [ [2, 34, 28, 35, 17, 0], [103, 57, 11, 18, 7, 2]]
+      elements:
+        - quads: [[2, 34, 28, 35, 17, 0], [90, 57, 11, 16, 8, 0]]
+        - quads: [[2, 34, 28, 35, 17, 0], [50, 57, 12, 18, 7, 2]]
+        - quads: [[2, 34, 28, 35, 17, 0], [64, 57, 11, 17, 8, 1]]
+        - quads: [[2, 34, 28, 35, 17, 0], [77, 57, 11, 17, 8, 1]]
+        - quads: [[2, 34, 28, 35, 17, 0], [103, 57, 11, 18, 7, 2]]
     walk_e:
-      frames:
-        - [72,77,25,48,13,0]
-        - [99,78,31,47,17,0]
-        - [132,76,20,49,12,0]
-        - [154,76,28,49,16,0]
-        - [184, 77, 26, 48, 16, 0]
-        - [212, 77, 22, 48, 13, 0]
+      elements:
+        - quads: [[72,77,25,48,13,0]]
+        - quads: [[99,78,31,47,17,0]]
+        - quads: [[132,76,20,49,12,0]]
+        - quads: [[154,76,28,49,16,0]]
+        - quads: [[184, 77, 26, 48, 16, 0]]
+        - quads: [[212, 77, 22, 48, 13, 0]]
     walk_n:
-      frames:
-        - [2, 72, 36, 48, 17, 0]
+      elements:
+        - quads: [[2, 72, 36, 48, 17, 0]]
     walk_s:
-      frames:
-        - [39, 77, 31, 48, 15, 0]
+      elements:
+        - quads: [[39, 77, 31, 48, 15, 0]]
 mancomb.mancomb:
   sheet: 'gfx/faces.png'
   type: 'asset.sprite'
