--- a/games/mm/main.yaml
+++ b/games/mm/main.yaml
@@ -4,7 +4,7 @@
   device_size: [320, 200]
   window_size: [640, 400]
   tick_multiplier: 5
-  start_room: outside
+  start_room: entry
   fonts:
     - id: ui
       file: './fonts/main.ttf'
