--- a/games/mm/main.yaml
+++ b/games/mm/main.yaml
@@ -1,6 +1,6 @@
 ---
   title: The secret of Monkey Island
-  lang: fra
+  lang: eng
   device_size: [320, 200]
   window_size: [640, 400]
   tick_multiplier: 5
