setup cmake for win

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,12 @@ set(MINOR_VERSION 0)
 set(PATCH_VERSION 0)
 set(VERSION ${ROOT_VERSION}.${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION})
 project(glib VERSION ${VERSION})
-
+set(_pf_x86 "Program\ Files\ \(x86\)")
+# work fine
+message( "$ENV{ProgramFiles\(x86\)}" )
+message( "$ENV{ProgramFiles}" )
 # set environment variables and flags
+cmake_policy(SET CMP0074 NEW)
 set(PROJECT_DIR ${CMAKE_CURRENT_LIST_DIR})
 set(BIN_DIR ${PROJECT_DIR}/bin)
 set(LIB_DIR ${PROJECT_DIR}/lib)
@@ -26,10 +30,12 @@ endif (WIN32)
 
 IF(MSVC)
     SET(CMAKE_CXX_FLAGS "/EHsc")
+	set(glm_DIR c:/users/fabve/Downloads/glm/cmake/glm)
+	set(ENV{FREETYPE_DIR} $ENV{ProgramFiles\(x86\)}\\freetype)
+	set(ENV{PNG_ROOT} $ENV{ProgramFiles\(x86\)}\\libpng)
+	set(JPEG_INCLUDE_DIR c:/Users/fabve/Downloads/jpeg-9d)
+	set(JPEG_LIBRARY_RELEASE c:\\Users\\fabve\\Downloads\\jpeg-9d\\Release\\x64)
 ENDIF(MSVC)
-message ("CANE")
-message (${CMAKE_CXX_FLAGS})
-message ("CANE")
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 REQUIRED)
@@ -39,7 +45,6 @@ find_package(PNG REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(yaml-cpp REQUIRED)
 message(${yaml-cpp_FOUND})
-message("PIPPO")
 #find_package(ASSIMP REQUIRED)
 #find_package(Lua REQUIRED)
 find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
