--- a/games/mm/text/eng/text.yaml
+++ b/games/mm/text/eng/text.yaml
@@ -9,7 +9,7 @@ ui:
   walkto: Walk to
   pickup: Pick up
   talkto: Talk to
-  give: Give
+  give: Giveir
   use: Use
   lookat: Look at
   turnon: Turn on
