--- a/games/monkey/dialogues/dialogues.yaml
+++ b/games/monkey/dialogues/dialogues.yaml
@@ -1,4 +1,85 @@
 ---
+loom:
+  text_set: '$dialogues/loom'
+  on_exit: on_exit_loom
+  nodes:
+    root:
+      lines: [0, 1, 2, 4, 3]
+  lines:
+    0:
+      text: 2
+      next: root
+      scr:
+        - [ 0, 0, sayn, player, 2]
+        - [ 1, 0, sayn, loom, 1]
+    1:
+      text: 3
+      next: root
+      scr:
+        - [ 0, 0, sayn, player, 3]
+        - [ 1, 0, sayn, loom, 1]
+    2:
+      text: 4
+      next: root
+      activate: [4]
+      scr:
+        - [ 0, 0, sayn, player, 4]
+        - [ 1, 0, sayn, loom, 6,7,8,9,10,11,12,13]
+    3:
+      text: 5
+      persist: true
+      scr:
+        - [ 0, 0, sayn, player, 5]
+        - [ 1, 0, sayn, loom, 1]
+    4:
+      text: 14
+      next: root
+      active: false
+      scr:
+        - [ 0, 0, sayn, player, 14]
+        - [ 1, 0, sayn, loom, 15]
+
+estevan:
+  text_set: '$dialogues/estevan'
+  on_exit: on_exit_estevan
+  nodes:
+    root:
+      lines: [0, 1, 2, 3, 4]
+  lines:
+    0:
+      text: 2
+      next: root
+      scr:
+        - [0, 0, sayn, player, 2]
+        - [1, 0, sayn, estevan, 6]
+    1:
+      text: 3
+      next: root
+      scr:
+        - [0, 0, sayn, player, 3]
+        - [1, 0, sayn, estevan, 7,8,9,10]
+    2:
+      text: 4
+      next: root
+      activate: [3]
+      scr:
+        - [0, 0, sayn, player, 4]
+        - [1, 0, sayn, estevan, 12, 13, 14, 15, 16]
+    3:
+      text: 17
+      active: false
+      next: root
+      scr:
+        - [0, 0, sayn, player, 17]
+        - [1, 0, sayn, estevan, 18, 19, 20]
+    4:
+      text: 5
+      persist: true
+      scr:
+        - [0, 0, sayn, player, 5]
+        - [1, 0, sayn, estevan, 11]
+
+
 mancomb:
   text_set: '$dialogues/mancomb'
   on_exit: on_exit_mancomb
