--- a/games/smb/rooms/world1_1.yaml
+++ b/games/smb/rooms/world1_1.yaml
@@ -26,7 +26,7 @@
            [150, 4, 0, 3, 1], [151, 5, 0, 2, 1], [155, 5, 0, 1, 1], [155, 4, 0, 2, 1], [155, 3, 0, 3, 1],
            [155, 2, 0, 4, 1], [181, 2, 0, 9, 1], [182, 3, 0, 8, 1], [183, 4, 0, 7, 1], [184, 5, 0, 6, 1],
            [185, 6, 0, 5, 1], [186, 7, 0, 4, 1], [187, 8, 0, 3, 1], [188, 9, 0, 2, 1], [198, 2, 0, 1, 1]]
-    - factory: [brick, {'model': brick, 'piece': brickpiece}]
+    - factory: [brick, {'model': sprites/01/brick, 'piece': sprites/01/brickpiece}]
       d: [ [20, 5], [22, 5], [24, 5], [77, 5], [79, 5], [80, 9], [81, 9], [82, 9], [83, 9], [84, 9], [85, 9], [86, 9],
            [87, 9], [91, 9], [92, 9], [93, 9], [100, 5], [118, 5], [121, 9], [122, 9], [123, 9], [128, 9], [129, 5],
            [130, 5], [131, 9], [168, 5], [169, 5], [171, 5]]
