--- a/games/monkey/rooms/lookout.yaml
+++ b/games/monkey/rooms/lookout.yaml
@@ -1,17 +1,17 @@
 ---
   id: lookout
+  type: default
   width: 320
   height: 144
-  bg:
-    - image: gfx/lookout_1.png
-      pos: [0, 0, -1]
-    - image: gfx/lookout_2.png
-      pos: [81, 16, 3]
-    - image: gfx/lookout_3.png
-      pos: [294, 33, 3]
-    - image: gfx/lookout_4.png
-      pos: [226, 0, 3]
-  walkareas:
-    - type: poly
-      outline: [203, 51, 315, 62, 315, 40, 293, 40, 260, 10, 260, 0, 260, -20, 234, -20, 234, 0, 234, 10, 221, 26, 152, 33, 152, 51]
-      depth: auto
+  items:
+    - factory: [bg, {'image': gfx/lookout_1.png}]
+      d: [[0, 0, -1]]
+    - factory: [bg, {'image': gfx/lookout_2.png}]
+      d: [[81, 16, 3]]
+    - factory: [bg, {'image': gfx/lookout_3.png}]
+      d: [[294, 33, 3]]
+    - factory: [bg, {'image': gfx/lookout_4.png}]
+      d: [[226, 0, 3]]
+    - factory: [walkarea, {'id': walkarea_0, 'depth': { 'type': "func.liny", 'values': [0, 1, 144, 0]}, 'outline':
+        [203, 51, 315, 62, 315, 40, 293, 40, 260, 10, 260, 0, 260, -20, 234, -20, 234, 0, 234, 10, 221, 26, 152, 33, 152, 51]} ]
+      d: [[0,0,0]]
